--- a/src/App.css
+++ b/src/App.css
@@ -235,3 +235,24 @@ body {
     background-size: 80px 80px;
   }
 }
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.end-of-list {
+  text-align: center;
+  margin: 24px 0;
+}
+
+input {
+  margin: 20px 25px;
+  padding: 10px 12px;
+  font-size: 16px;
+  font-weight: 400;
+  width: 50%;
+  border-radius: 9px;
+  outline: none;
+  border: none;
+}
